# sr-gate-quantum-distillation

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  release_manifest_sha256.csv  requirements-core.txt
configs/: confirmatory_config.json
data/: README.md
docs/: DATASETS.md  GITHUB_ZENODO_RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v3.0.0.md  REPRODUCIBILITY.md  STATISTICAL_PROTOCOL.md
environment/: environment_manifest.json  requirements_freeze.txt
notebooks/: Quantum_CeNN_Reproducible_T4_5H_V3_FinalHoldout.ipynb
paper/: README.md  references_RINENG_revised.bib
results/: README.md  confirmatory_results_final_test_4b53f0d205ce.csv
results/analysis/corrected_4b53f0d205ce/: ANALYSIS_NOTES.md  H1_corrected.csv  H2_summary_corrected.csv  H2a_noninferiority_corrected.csv  (+12 more)
results/manifests/: artifact_manifest_sha256_4b53f0d205ce.csv  dataset_raw_manifest.csv  original_corrected_analysis_package_manifest_sha256.csv  preprocessing_AAPL_4b53f0d205ce_full.json  preprocessing_ETTh1_4b53f0d205ce_development_only.json  preprocessing_ETTh1_4b53f0d205ce_full.json  preprocessing_ETTm2_4b53f0d205ce_full.json  preprocessing_Energy_4b53f0d205ce_full.json  preprocessing_Exchange_4b53f0d205ce_full.json  preprocessing_Jena_4b53f0d205ce_full.json  run_identity_4b53f0d205ce.json  run_manifest_4b53f0d205ce.json
scripts/: build_release_manifest.py  corrected_analysis.py  download_datasets.py  run_notebook.py  verify_release.py
src/: quantum_cenn_final_holdout.py
tests/: test_release_artifacts.py
(+16 files in other folders)
